--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,14 @@
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
           <small>{{ site.tagline }}</small>
         </h3>
+        <nav>
+            <ul>
+                <li><a href="about.html">about</a></li>
+                <li><a href="projects.html">projects</a></li>
+                <li><a href="resume.html">resume</a></li>
+                <li><a href="about.html">contact</a></li>
+            </ul>
+        </nav>
       </header>
 
       <main>
