--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -76,3 +76,12 @@ tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
   background-color: #f9f9f9;
 }
+
+nav ul li {
+    display: inline;
+    float: right;
+}
+
+nav ul li a {
+    display: block;
+}
