--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,14 +11,14 @@
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
           <small>{{ site.tagline }}</small>
         </h3>
-        <nav>
+        <small><nav>
             <ul>
                 <li><a href="about.html">about</a></li>
                 <li><a href="projects.html">projects</a></li>
                 <li><a href="resume.html">resume</a></li>
-                <li><a href="about.html">contact</a></li>
+                <li><a href="contact.html">contact</a></li>
             </ul>
-        </nav>
+            </nav></small>
       </header>
 
       <main>
