--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,16 +9,16 @@
       <header class="masthead">
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-          <small>{{ site.tagline }}</small>
+<!--          <small>{{ site.tagline }}</small>-->
         </h3>
-        <small><nav>
+        <nav>
             <ul>
                 <li><a href="about.html">about</a></li>
                 <li><a href="projects.html">projects</a></li>
                 <li><a href="resume.html">resume</a></li>
                 <li><a href="contact.html">contact</a></li>
             </ul>
-            </nav></small>
+            </nav>
       </header>
 
       <main>
