--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -6,7 +6,7 @@
   padding-top:    1rem;
   padding-bottom: 1rem;
   margin-bottom: 3rem;
-  display: block
+//  display: block;
 }
 
 .masthead-title {
@@ -23,27 +23,4 @@
     font-weight: 400;
     opacity: .5;
   }
-}
-
-nav ul {
-    display: block;
-    float: right;
-}
-
-nav ul li {
-    display: inline;
-    float: left;
-}
-
-nav ul li a {
-    display: block;
-}
-
-.masthead:before, .masthead:after {
-    content: " ";
-    display: table;
-}
-
-.masthead:after {
-    clear: both;
 }
