--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -31,6 +31,16 @@ nav {
     margin-top: 0.15rem;
 }
 
+nav ul {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
 nav ul li {
-    display: inline;
+    display: inline-block;
+}
+
+nav a {
+    display: block;
 }
