--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,24 +7,16 @@
 
     <div class="container content">
       <header class="masthead">
-<!--
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-          <small>{{ site.tagline }}</small>
+<!--          <small>{{ site.tagline }}</small>-->
         </h3>
--->
         <nav>
             <ul>
-                <h3 class="masthead-title">
-                <li class="left"><a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a></li>
-                
-                <small>
                 <li><a href="about.html">about</a></li>
                 <li><a href="projects.html">projects</a></li>
                 <li><a href="resume.html">resume</a></li>
                 <li><a href="contact.html">contact</a></li>
-                    </small>
-                </h3>
             </ul>
             </nav>
       </header>
