--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -26,26 +26,26 @@
   }
 }
 
-nav {
-    margin-top: 0.15rem;
-}
-
-nav ul {
-    padding: 0;
-    margin: 0;
-    text-align: center;
-}
-
-nav ul li {
-    display: inline-block;
-    float: right;
-    padding: 0.5em 0;
-}
-
-nav a {
-    display: block;
-}
-
-.left {
-    float: left;
-}
+//nav {
+//    margin-top: 0.15rem;
+//}
+//
+//nav ul {
+//    padding: 0;
+//    margin: 0;
+//    text-align: center;
+//}
+//
+//nav ul li {
+//    display: inline-block;
+//    float: right;
+//    padding: 0.5em 0;
+//}
+//
+//nav a {
+//    display: block;
+//}
+//
+//.left {
+//    float: left;
+//}
