--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,8 @@ pagination:
 ---
 
 <article class="page">
-  <h1 class="page-title">{{ page.title }}</h1>
+  {% if page.title != "Home" %}
+    <h1 class="page-title">{{ page.title }}</h1>
+  {% endif %}
   {{ content }}
 </article>
