--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,15 @@
 
     <div class="container content">
       <header class="masthead">
+<!--
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-<!--          <small>{{ site.tagline }}</small>-->
+          <small>{{ site.tagline }}</small>
         </h3>
+-->
         <nav>
             <ul>
+                <li><h3><a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a></h3></li>
                 <li><a href="about.html">about</a></li>
                 <li><a href="projects.html">projects</a></li>
                 <li><a href="resume.html">resume</a></li>
