--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -27,7 +27,7 @@
 }
 
 nav {
-    text-align: right
+    text-align: right;
 }
 
 nav ul li {
@@ -36,4 +36,5 @@ nav ul li {
 
 .left {
     float: left;
+    font-weight: bold;
 }
