--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 -->
         <nav>
             <ul>
-                <li><h3><a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a></h3></li>
+                <li><a class="left" href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a></li>
                 <li><a href="about.html">about</a></li>
                 <li><a href="projects.html">projects</a></li>
                 <li><a href="resume.html">resume</a></li>
