--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,13 @@
 -->
         <nav>
             <ul>
-                <li><a class="left" href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a></li>
-                <li><a href="about.html">about</a></li>
+                <h3 class="masthead-title">
+                    <li><a class="left" href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a></li>
+                <small><li><a href="about.html">about</a></li>
                 <li><a href="projects.html">projects</a></li>
                 <li><a href="resume.html">resume</a></li>
-                <li><a href="contact.html">contact</a></li>
+                    <li><a href="contact.html">contact</a></li></small>
+                </h3>
             </ul>
             </nav>
       </header>
