--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,12 @@
             <ul>
                 <h3 class="masthead-title">
                     <li><a class="left" href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a></li>
-                <small><li><a href="about.html">about</a></li>
-                <li><a href="projects.html">projects</a></li>
-                <li><a href="resume.html">resume</a></li>
-                    <li><a href="contact.html">contact</a></li></small>
+                    <small>
+                        <li><a href="{{ site.baseurl }}/about.html">about</a></li>
+                        <li><a href="{{ site.baseurl }}/projects.html">projects</a></li>
+                        <li><a href="{{ site.baseurl }}/cv.html">cv</a></li>
+                        <li><a href="{{ site.baseurl }}/contact.html">contact</a></li>
+                    </small>
                 </h3>
             </ul>
             </nav>
