--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <h1>Archive of posts with {{ page.type }} '{{ page.title }}'</h1>
 <ul class="posts">
   {% for post in page.posts %}
