--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ pagination:
 ---
 
 <article class="page">
-  {% if page.title != "Home" %}
+  {% if page.title contains "Home" %}
     <h1 class="page-title">{{ page.title }}</h1>
   {% endif %}
   {{ content }}
