--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
             <ul>
                 <h3 class="masthead-title">
                     <li><a class="left" href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a></li>
-                    <small>
+                    <small class="nav">
                         <li><a href="{{ site.baseurl }}/about.html">about</a></li>
                         <li><a href="{{ site.baseurl }}/projects.html">projects</a></li>
                         <li><a href="{{ site.baseurl }}/cv.html">cv</a></li>
