--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -22,6 +22,7 @@
     font-size: 75%;
     font-weight: 400;
     opacity: .5;
+    display: inline-block;
   }
 }
 
@@ -36,10 +37,6 @@ nav ul {
 
 nav ul li {
     display: inline
-}
-
-.nav {
-    width: 49%;
 }
 
 .left {
