--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
                 <h3 class="masthead-title">
                     <li><a class="left" href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a></li>
                     <small>
+                        <li><a href="{{ site.baseurl }}/blog/">blog</a></li>
                         <li><a href="{{ site.baseurl }}/about.html">about</a></li>
                         <li><a href="{{ site.baseurl }}/projects.html">projects</a></li>
                         <li><a href="{{ site.baseurl }}/cv.html">cv</a></li>
