--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
       </footer>
     </div>
 
-  <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script> 
-  <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
+  <script async defer src="https://api.jden.me/app.js"></script> 
+  <noscript><img src="https://api.jden.me/image.gif" alt=""></noscript>
   </body>
 </html>
