--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -45,6 +45,7 @@ layout: default
 {% endfor %}
 </ul>
 
+<!--
 <hr>
 
  Archives are sorted by newest first.
@@ -74,4 +75,4 @@ layout: default
   </li>
   {% endfor %}
 </ul>
-{% endfor %}
+{% endfor %}-->
