--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -26,16 +26,16 @@
   }
 }
 
-nav {
+#top-level {
     text-align: right;
 }
 
-nav ul {
+#top-level ul {
     padding: 0;
     margin: 0;
 }
 
-nav ul li {
+#top-level ul li {
     display: inline
 }
 
