--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
           <small>{{ site.tagline }}</small>
         </h3>
 -->
-        <nav>
+        <nav id="top-level">
             <ul>
                 <h3 class="masthead-title">
                     <li><a class="left" href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a></li>
