--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
                         <li><a href="{{ site.baseurl }}/projects.html">projects</a></li>
                         <li><a href="{{ site.baseurl }}/cv.html">cv</a></li>                        
                         <li><a href="{{ site.baseurl }}/about.html">about</a></li>
+                        <li><a href="{{ site.baseurl }}/archive.html">archive</a></li>
                     </small>
                 </h3>
             </ul>
