--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -38,6 +38,12 @@ strong {
   color: #303030;
 }
 
+small {
+  color: #9a9a9a;
+  font-size: 75%;
+  font-weight: normal;
+}
+
 ul, ol, dl {
   margin-top: 0;
   margin-bottom: 1rem;
