--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,12 +14,10 @@ layout: default
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
       <li>
-        <h4>
         <a href="{{ site.baseurl }}{{ post.url }}">
-          {{ post.title }}
+          <h4>{{ post.title }}
+              <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></h4>
         </a>
-          <small><time datetime="{{ post.date | date_to_xmlschema }}" class="post-date">{{ post.date | date: "%A %-d %B %Y" }}</time></small>
-        </h4>
       </li>
     {% endfor %}
   </ul>
