--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -55,14 +55,14 @@
       color: #999;
     }
 
-    a:hover {
-      color: #268bd2;
-      text-decoration: none;
-
-      small {
-        color: inherit;
-      }
-    }
+//    a:hover {
+//      color: #268bd2;
+//      text-decoration: none;
+//
+//      small {
+//        color: inherit;
+//      }
+//    }
   }
 }
 
