--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -54,6 +54,10 @@
       font-size: 75%;
       color: #999;
     }
+    
+      a {
+        color: inherit;
+      }
 
 //    a:hover {
 //      color: #268bd2;
