--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,13 @@
         <nav id="top-level">
             <ul>
                 <h3 class="masthead-title">
-                    <li><a class="left" href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a></li>
+                    <li><a class="left" href="{{ site.baseurl }}/" title="Home">
+                        {% if page.gospel %}
+                          the gospel according to jden
+                        {% else %}
+                          {{ site.title }}
+                        {% endif %}
+                        </a></li>
                     <small>
                         <li><a href="{{ site.baseurl }}/blog/">blog</a></li>
                         <li><a href="{{ site.baseurl }}/archive.html">archive</a></li>
