--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,10 @@
             <ul>
                 <h3 class="masthead-title">
                     <li><a class="left" href="{{ site.baseurl }}/" title="Home">
-                        {% if page.gospel %}
-                          the gospel according to jden
-                        {% else %}
+                        {% if page.non-blog %}
                           {{ site.title }}
+                        {% else %}
+                          the gospel according to jden
                         {% endif %}
                         </a></li>
                     <small>
