--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -16,7 +16,7 @@
 .page-title,
 .post-title,
 .post-title a {
-  color: #000;
+  color: #303030;
 }
 .page-title,
 .post-title {
@@ -28,7 +28,7 @@
   display: block;
   margin-top: -.5rem;
   margin-bottom: 1rem;
-  color: $gray-5;
+  color: #9a9a9a;
 }
 
 article p {
