--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -31,9 +31,9 @@
   color: #9a9a9a;
 }
 
-article p {
-  text-align: justify;
-}
+//article p {
+//  text-align: justify;
+//}
 
 .cv {
   text-align: left;
