--- a/_layouts/tag-archive.html
+++ b/_layouts/tag-archive.html
@@ -2,12 +2,16 @@
 layout: default
 ---
 
-<h1>Archive of posts with {{ page.type }} '{{ page.title }}'</h1>
-<ul class="posts">
-  {% for post in page.posts %}
-    <li>
-      <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-      <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-    </li>
+<h2>Archive of posts with {{ page.type }} '{{ page.title }}'</h2>
+
+<ul class="related-posts">
+  {% for post in page.posts %}   
+  <li>
+    <a href="{{ site.baseurl }}{{ post.url }}">
+    <h4>{{ post.title }}
+      <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></h4>
+    </a>
+  </li>
   {% endfor %}
+  <hr>
 </ul>
