--- a/_layouts/tag-archive.html
+++ b/_layouts/tag-archive.html
@@ -2,15 +2,12 @@
 layout: default
 ---
 
-<h2>Archive of posts with {{ page.type }} '{{ page.title }}'</h2>
+<h2>Archive of posts with {{ page.type }} <a href="{{ site.baseurl }}/blog/{{ page.title }}">{{ page.title }}</a>.</h2>
 
 <ul class="related-posts">
   {% for post in page.posts %}   
   <li>
-    <a href="{{ site.baseurl }}{{ post.url }}">
-    <h4>{{ post.title }}
-      <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%-d %B %Y" }}</time></small></h4>
-    </a>
+    {% include post-list.html %}
   </li>
   {% endfor %}
   <hr>
