--- a/_layouts/category-archive.html
+++ b/_layouts/category-archive.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h2>Archive of posts with {{ page.type }} <a href="{{ site.baseurl }}/blog/tag/{{ page.title }}/">{{ page.title }}</a>.</h2>
+<h2>Archive of posts with {{ page.type }} <a href="{{ site.baseurl }}/blog/{{ page.title }}/">{{ page.title }}</a>.</h2>
 
 <ul class="related-posts">
   {% for post in page.posts %}   
