--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
                         </a></li>
                     <small>
                         <li><a href="{{ site.baseurl }}/blog/">blog</a></li>
-                        <li><a href="{{ site.baseurl }}/archive.html">archive</a></li>
+                        <li><a href="{{ site.baseurl }}/blog/archive/">archive</a></li>
                         <li><a href="{{ site.baseurl }}/projects.html">projects</a></li>
                         <li><a href="{{ site.baseurl }}/cv.html">cv</a></li>                        
                         <li><a href="{{ site.baseurl }}/about.html">about</a></li>
