--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,45 +2,9 @@
 layout: default
 ---
 
-<h1>Archive of posts with {{ page.type }} '{{ page.title }}'</h1>
-<ul class="posts">
-  {% for post in page.posts %}
-    <li>
-      <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-      <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-    </li>
-  {% endfor %}
-</ul>
+<hr>
 
-<h1>Archive of posts from {{ page.date | date: "%Y" }}</h1>
+<p>Filter the archive by: <a href="{{ site.baseurl }}/blog/archive/">year</a>, <a href="{{ site.baseurl }}/blog/archive/category/">category</a>, or by <a href="{{ site.baseurl }}/blog/archive/tag/">tag</a>.</p>
 
-<ul class="posts">
-{% for post in page.posts %}
-  <li>
-    <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-    <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-  </li>
-{% endfor %}
-</ul>
+<hr>
 
-<h1>Archive of posts from {{ page.date | date: "%B %Y" }}</h1>
-
-<ul class="posts">
-{% for post in page.posts %}
-  <li>
-    <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-    <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-  </li>
-{% endfor %}
-</ul>
-
-<h1>Archive of posts from {{ page.date | date: "%B %-d, %Y" }}</h1>
-
-<ul class="posts">
-{% for post in page.posts %}
-  <li>
-    <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-    <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-  </li>
-{% endfor %}
-</ul>
