--- a/_layouts/category-archive.html
+++ b/_layouts/category-archive.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: archive
 ---
 
 <h2>Archive of posts with {{ page.type }} <a href="{{ site.baseurl }}/blog/{{ page.title }}/">{{ page.title }}</a>.</h2>
