--- a/_layouts/tag-archive.html
+++ b/_layouts/tag-archive.html
@@ -4,11 +4,12 @@ layout: default
 
 <h2>Archive of posts with {{ page.type }} <a href="{{ site.baseurl }}/blog/tag/{{ page.title }}/">{{ page.title }}</a>.</h2>
 
-<ul class="related-posts">
-  {% for post in page.posts %}   
-  <li>
-    {% include post-list.html %}
-  </li>
-  {% endfor %}
-  <hr>
-</ul>
+<h3 id="{{ tag | slugify }}"><a href="{{ site.baseurl }}/blog/tag/{{ tag }}">{{ tag }}</a></h3>
+
+  <ul class="related-posts" aria-label="posts classified under {{ tag }}">
+  {% for post in site.tags[tag] %}
+    <li class="archive-posts">
+      {% include post-list.html %}
+    </li>
+      
+  </ul>
