--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<h1>Archive</h1>
+
 <hr>
 
 <p>Filter the archive by: <a href="{{ site.baseurl }}/blog/archive/">year</a>, <a href="{{ site.baseurl }}/blog/archive/category/">category</a>, or by <a href="{{ site.baseurl }}/blog/archive/tag/">tag</a>.</p>
@@ -9,3 +11,5 @@ layout: default
 <hr>
 
 {{ content }}
+
+<hr>
