--- a/_layouts/tag-archive.html
+++ b/_layouts/tag-archive.html
@@ -2,7 +2,7 @@
 layout: archive
 ---
 
-<h3><a href="{{ site.baseurl }}/blog/tag/{{ page.title }}">{{ page.title }}</a></h3>
+<h3>Posts with tag <a href="{{ site.baseurl }}/blog/tag/{{ page.title }}">{{ page.title }}</a></h3>
 
   <ul class="related-posts" aria-label="posts classified under {{ page.title }}">
   {% for post in page.posts %}
