--- a/_layouts/tag-archive.html
+++ b/_layouts/tag-archive.html
@@ -4,6 +4,10 @@ layout: archive
 
 <h2>By tag</h2>
 
+<nav><p><strong><a href="{{site.baseurl }}/blog/tag/{{ page.title }}">{{ page.title }}</a></strong></p></nav>
+
+<hr>
+
 <h3><a href="{{ site.baseurl }}/blog/tag/{{ page.title }}">{{ page.title }}</a></h3>
 
   <ul class="related-posts" aria-label="posts classified under {{ page.title }}">
