--- a/_layouts/tag-archive.html
+++ b/_layouts/tag-archive.html
@@ -4,7 +4,11 @@ layout: archive
 
 <h2>By tag</h2>
 
-<nav><p><strong><a href="{{site.baseurl }}/blog/tag/{{ page.title }}">{{ page.title }}</a></strong></p></nav>
+<nav><p>
+    {% assign letter = page.title | slice:0 | upcase %}
+    <h2><a href="{{ site.baseurl }}/blog/tag/#{{ letter }}">{{ letter }}</a></h2>
+    
+    <strong><a href="{{site.baseurl }}/blog/tag/{{ page.title }}">{{ page.title }}</a></strong></p></nav>
 
 <hr>
 
