--- a/_layouts/category-archive.html
+++ b/_layouts/category-archive.html
@@ -4,7 +4,7 @@ layout: archive
 
 <h2>By category</h2>
 
-<nav><p><strong><a href="{{site.baseurl }}/blog/category/{{ page.title }}">{{ page.title }}</a></strong></p></nav>
+<nav class="archive-nav"><strong><a href="{{site.baseurl }}/blog/category/{{ page.title }}">{{ page.title }}</a></strong></nav>
 
 <hr>
 
