--- a/_layouts/year-archive.html
+++ b/_layouts/year-archive.html
@@ -37,3 +37,21 @@ layout: archive
       </ul>
       {% endfor %}
     <hr>
+
+---
+
+{% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}
+  {% for year in postsByYear %}
+    <h2 id="{{ year.name }}"><a href="{{ site.baseurl }}/blog/{{ year.name }}">{{ year.name }}</a> <a href="#top">&#10548;</a></h2>
+    {% assign postsByMonth = year.items | group_by_exp:"post", "post.date | date: '%B'" %}
+
+    {% for month in postsByMonth %}
+    <h3><a href="{{ site.baseurl }}/blog/{{ year.name }}/{{ month.name | date: "%m" }}/">{{ month.name }}</a></h3>
+      <ul class="related-posts">
+        {% for post in month.items %}
+          <li class="archive-posts">{% include post-list.html %}</li>
+        {% endfor %}
+      </ul>
+      {% endfor %}
+    <hr>
+{% endfor %}
