--- a/_layouts/year-archive.html
+++ b/_layouts/year-archive.html
@@ -2,7 +2,7 @@
 layout: archive
 ---
 
-<h2>By year by month</h2>
+<h2>By year</h2>
 <nav class="archive-nav" aria-label="year">
   <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}">{{ page.date | date: '%Y' }}</a></strong>&nbsp;
 </nav>
