--- a/_layouts/month-archive.html
+++ b/_layouts/month-archive.html
@@ -4,14 +4,14 @@ layout: archive
 
 <h2>By year by month</h2>
 <nav class="archive-nav" aria-label="year">
-  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}">{{ page.date | date: '%Y' }}</a></strong>&nbsp;
+  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}">{{ page.date | date: '%Y' }}</a></strong>&nbsp;
 </nav>
 
 <hr>
 
 {% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}
   {% for year in postsByYear %}
-    <h2 id="{{ year.name }}"><a href="{{ site.baseurl }}/blog/{{ year.name }}">{{ year.name }}</a> <a href="#top">&#10548;</a></h2>
+    <h2 id="{{ year.name }}"><a href="{{ site.baseurl }}/blog/{{ year.name }}">{{ year.name }}</a></h2>
 
     {% assign postsByMonth = year.items | group_by_exp:"post", "post.date | date: '%B'" %}
 
