--- a/_layouts/day-archive.html
+++ b/_layouts/day-archive.html
@@ -4,7 +4,7 @@ layout: archive
 
 <h2>By year by month by day</h2>
 <nav class="archive-nav" aria-label="year">
-  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}">{{ page.date | date: '%Y' }}</a></strong>&nbsp;
+  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%Y' }}</a></strong>&nbsp;
 </nav>
 
 <hr>
@@ -17,6 +17,7 @@ layout: archive
 
     {% for month in postsByMonth %}
     <h3><a href="{{ site.baseurl }}/blog/{{ year.name }}/{{ month.name | date: '%m' }}/">{{ month.name }}</a></h3>
+    <h4><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m/%d' }}/">{{ page.date | date: '%d' }}</a></h4>
       <ul class="related-posts">
         {% for post in month.items %}
           <li class="archive-posts">{% include post-list.html %}</li>
