--- a/_layouts/day-archive.html
+++ b/_layouts/day-archive.html
@@ -4,7 +4,7 @@ layout: archive
 
 <h2>By year by month by day</h2>
 <nav class="archive-nav" aria-label="year">
-  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%Y' }}</a></strong>&nbsp;
+  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%Y %B %d' }}</a></strong>&nbsp;
 </nav>
 
 <hr>
