--- a/_layouts/day-archive.html
+++ b/_layouts/day-archive.html
@@ -4,31 +4,10 @@ layout: archive
 
 <h2>By year by month by day</h2>
 <nav class="archive-nav" aria-label="year">
-  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%Y %B %d' }}</a></strong>&nbsp;
+  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ page.date | date: '%Y' }}</a> <a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%B' }}/">{{ page.date | date: '%B' }}</a> <a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%B/%d' }}/">{{ page.date | date: '%d' }}</a></strong>
 </nav>
 
 <hr>
-
-{% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}
-  {% for year in postsByYear %}
-    <h2 id="{{ year.name }}"><a href="{{ site.baseurl }}/blog/{{ year.name }}">{{ year.name }}</a></h2>
-
-    {% assign postsByDay = year.items | group_by_exp:"post", "post.date | date: '%d'" %}
-    
-    <h3><a href="{{ site.baseurl }}/blog/{{ year.name }}/{{ month.name | date: '%m' }}/">{{ month.name }}</a></h3>
-
-    {% for day in postsByDay %}
-    <h4><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m/%d' }}/">{{ day.name | date: '%d' }}</a></h4>
-      <ul class="related-posts">
-        {% for post in day.items %}
-          <li class="archive-posts">{% include post-list.html %}</li>
-        {% endfor %}
-      </ul>
-    {% endfor %}
-  <hr>
-{% endfor %}
-
----
 
 {% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}
   {% for year in postsByYear %}
