--- a/_layouts/day-archive.html
+++ b/_layouts/day-archive.html
@@ -4,7 +4,7 @@ layout: archive
 
 <h2>By year by month by day</h2>
 <nav class="archive-nav" aria-label="year">
-  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ page.date | date: '%Y' }}</a> <a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%B' }}/">{{ page.date | date: '%B' }}</a> <a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%B/%d' }}/">{{ page.date | date: '%d' }}</a></strong>
+  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ page.date | date: '%Y' }}</a> <a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%B' }}</a> <a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m/%d' }}/">{{ page.date | date: '%d' }}</a></strong>
 </nav>
 
 <hr>
