--- a/_layouts/month-archive.html
+++ b/_layouts/month-archive.html
@@ -4,7 +4,7 @@ layout: archive
 
 <h2>By year by month</h2>
 <nav class="archive-nav" aria-label="year">
-  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ page.date | date: '%Y' }}</a> <a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%B' }}/">{{ page.date | date: '%B' }}</a></strong>
+  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ page.date | date: '%Y' }}</a> <a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%B' }}</a></strong>
 </nav>
 
 <hr>
@@ -18,7 +18,7 @@ layout: archive
     <h3><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%B' }}</a></h3>
 
     {% for day in postsByDay %}
-    <h4><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m/%d' }}/">{{ day.name }}</a></h4>
+    <h4><a href="{{ site.baseurl }}/blog/{{ day.date | date: '%Y/%m/%d' }}/">{{ day.name }}</a></h4>
       <ul class="related-posts">
         {% for post in day.items %}
           <li class="archive-posts">{% include post-list.html %}</li>
