--- a/_layouts/year-archive.html
+++ b/_layouts/year-archive.html
@@ -2,14 +2,21 @@
 layout: archive
 ---
 
+{% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}
+{% assign months = year.items | group_by_exp:"post", "post.date | date: '%B'" %}
+
+
 <h2>By year</h2>
 <nav class="archive-nav" aria-label="year">
   <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ page.date | date: '%Y' }}</a></strong>&nbsp;
+    
+  {% for month in months %}
+    <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ month.name | date: '%m' }}</a></strong>&nbsp;
 </nav>
 
 <hr>
 
-{% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}
+<!--{% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}-->
   {% for year in postsByYear %}
     <h2 id="{{ year.name }}"><a href="{{ site.baseurl }}/blog/{{ year.name }}">{{ year.name }}</a></h2>
     {% assign postsByMonth = year.items | group_by_exp:"post", "post.date | date: '%B'" %}
