--- a/_layouts/year-archive.html
+++ b/_layouts/year-archive.html
@@ -12,6 +12,7 @@ layout: archive
     
   {% for month in months %}
     <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ month.name | date: '%m' }}</a></strong>&nbsp;
+  {% endfor %}
 </nav>
 
 <hr>
