--- a/_layouts/year-archive.html
+++ b/_layouts/year-archive.html
@@ -3,7 +3,7 @@ layout: archive
 ---
 
 {% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}
-{% assign months = year.items | group_by_exp:"post", "post.date | date: '%B'" %}
+{% assign months = postsByYear[0].items | group_by_exp:"post", "post.date | date: '%B'" %}
 
 
 <h2>By year</h2>
