--- a/_layouts/year-archive.html
+++ b/_layouts/year-archive.html
@@ -4,7 +4,7 @@ layout: archive
 
 <!--{% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}-->
 {% assign postsByYear = page.posts %}
-{% assign months = postsByYear[0].items | group_by_exp:"post", "post.date | date: '%B'" %}
+{% assign months = postsByYear.items | group_by_exp:"post", "post.date | date: '%B'" %}
 
 
 <h2>By year</h2>
@@ -14,7 +14,7 @@ layout: archive
   <h3>By month</h3>
     
   {% for month in months %}
-    <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ month.name | date: '%m' }}</a></strong>&nbsp;
+    <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ month.name | date: '%B' }}</a></strong>&nbsp;
   {% endfor %}
 </nav>
 
