--- a/_layouts/year-archive.html
+++ b/_layouts/year-archive.html
@@ -14,7 +14,7 @@ layout: archive
   <h3>By month</h3>
     
   {% for month in months %}
-    <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ month.name | date: '%B' }}</a></strong>&nbsp;
+    <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ month.name }}</a></strong>&nbsp;
   {% endfor %}
 </nav>
 
