--- a/_layouts/year-archive.html
+++ b/_layouts/year-archive.html
@@ -2,9 +2,9 @@
 layout: archive
 ---
 
-{% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}
-<!--{% assign postsByYear = page.posts %}-->
-{% assign months = postsByYear.items | group_by_exp:"post", "post.date | date: '%B'" %}
+<!--{% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}-->
+{% assign year = page.posts %}
+{% assign months = postsByYear[0].items | group_by_exp:"post", "post.date | date: '%B'" %}
 
 
 <h2>By year</h2>
@@ -21,7 +21,7 @@ layout: archive
 <hr>
 
 <!--{% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}-->
-  {% for year in postsByYear %}
+<!--  {% for year in postsByYear %}-->
     <h2 id="{{ year.name }}"><a href="{{ site.baseurl }}/blog/{{ year.name }}">{{ year.name }}</a></h2>
     {% assign postsByMonth = year.items | group_by_exp:"post", "post.date | date: '%B'" %}
 
@@ -34,4 +34,4 @@ layout: archive
       </ul>
     {% endfor %}
   <hr>
-{% endfor %}
+<!--{% endfor %}-->
