--- a/_layouts/year-archive.html
+++ b/_layouts/year-archive.html
@@ -11,7 +11,7 @@ layout: archive
 <nav class="archive-nav" aria-label="year">
   <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ page.date | date: '%Y' }}</a></strong>&nbsp;
     
-  <h3>By month</h3>
+  <h3 class="archive-header">By month</h3>
     
   {% for month in months | reverse %}
     <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ month.name }}</a></strong>&nbsp;
