--- a/_layouts/year-archive.html
+++ b/_layouts/year-archive.html
@@ -13,7 +13,7 @@ layout: archive
     
   <h3 class="archive-header">By month</h3>
     
-  {% for month in months | reverse %}
+  {% for month in "months | reverse" %}
     <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ month.name }}</a></strong>&nbsp;
   {% endfor %}
 </nav>
