--- a/_layouts/month-archive.html
+++ b/_layouts/month-archive.html
@@ -2,9 +2,22 @@
 layout: archive
 ---
 
-<h2>By year by month</h2>
+{{ assign year = page.posts }}
+
+<h2>By year</h2>
 <nav class="archive-nav" aria-label="year">
-  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ page.date | date: '%Y' }}</a> <a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%B' }}</a></strong>
+  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ page.date | date: '%Y' }}</a></strong>
+    
+<h3 class="archive-header">By month</h3>
+<strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%B' }}</a></strong>
+    
+    <h4>Test: {{ year.name }} {{ month.name }} {{ day.name }}</h4>
+  
+  <h4 class="archive-header">By day</h4>
+    
+  {% for day in days reversed %}
+    <strong><a href="">{{ day.name }}</a></strong>&nbsp;
+  {% endfor %}
 </nav>
 
 <hr>
