--- a/_layouts/month-archive.html
+++ b/_layouts/month-archive.html
@@ -2,7 +2,7 @@
 layout: archive
 ---
 
-{{ assign year = page.posts }}
+{% assign year = page.posts %}
 
 <h2>By year</h2>
 <nav class="archive-nav" aria-label="year">
@@ -14,6 +14,8 @@ layout: archive
     <h4>Test: {{ year.name }} {{ month.name }} {{ day.name }}</h4>
   
   <h4 class="archive-header">By day</h4>
+    
+  {% assign days = page.posts | group_by_exp:"post", "page.date | date: '%B'" %}
     
   {% for day in days reversed %}
     <strong><a href="">{{ day.name }}</a></strong>&nbsp;
