--- a/_layouts/month-archive.html
+++ b/_layouts/month-archive.html
@@ -15,7 +15,7 @@ layout: archive
   
   <h4 class="archive-header">By day</h4>
     
-  {% assign days = page.posts | group_by_exp:"post", "page.date | date: '%d'" %}
+<!--  {% assign days = page.posts | group_by_exp:"post", "page.date | date: '%d'" %}-->
     
   {% for day in days reversed %}
     <strong><a href="">{{ day.name }}</a></strong>&nbsp;
