--- a/_layouts/month-archive.html
+++ b/_layouts/month-archive.html
@@ -16,10 +16,10 @@ layout: archive
   <h4 class="archive-header">By day</h4>
     
 <!--  {% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}-->
-  {% assign days = page.posts | group_by_exp:"post", "page.date | date: '%Y %b %d'" %}
+  {% assign postsByDay = page.posts | group_by_exp:"post", "page.date | date: '%Y %B %d'" %}
 
     
-  {% for day in days reversed %}
+  {% for day in postByDay reversed %}
     <strong><a href="">{{ day.name }}</a></strong>&nbsp;
   {% endfor %}
 </nav>
