--- a/_layouts/month-archive.html
+++ b/_layouts/month-archive.html
@@ -16,9 +16,7 @@ layout: archive
   <h4 class="archive-header">By day</h4>
     
 <!--  {% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}-->
-  {% assign postsByDay = page.posts | group_by_exp:"post", "page.date | date: '%Y %B %d'" %}
-
-    {{ page.date }}
+  {% assign postsByDay = page.posts | group_by_exp:"post", "post.date | date: '%Y %B %d'" %}
     
   {% for day in postsByDay reversed %}
     <strong><a href="">{{ day.name }}</a></strong>&nbsp;
