--- a/_layouts/month-archive.html
+++ b/_layouts/month-archive.html
@@ -27,7 +27,7 @@ layout: archive
 <h3><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%B' }}</a></h3>
 
 {% for day in postsByDay %}
-<h4><a href="{{ site.baseurl }}/blog/{{ day.items.date | date: '%Y/%m/%d' }}/">{{ day.name }}</a></h4>
+<h4><a href="{{ site.baseurl }}/blog/{{ day.items[0].date | date: '%Y/%m/%d' }}/">{{ day.name }}</a></h4>
   <ul class="related-posts">
     {% for post in day.items %}
       <li class="archive-posts">{% include post-list.html %}</li>
