--- a/_layouts/day-archive.html
+++ b/_layouts/day-archive.html
@@ -2,13 +2,36 @@
 layout: archive
 ---
 
-<h2>By year by month by day</h2>
 <nav class="archive-nav" aria-label="year">
-  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ page.date | date: '%Y' }}</a> <a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%B' }}</a> <a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m/%d' }}/">{{ page.date | date: '%d' }}</a></strong>
+  
+  <h2 class="archive-header">By year</h2>
+  
+  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ page.date | date: '%Y' }}</a></strong>
+    
+  <h3 class="archive-header">By month</h3>
+  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%B' }}</a></strong>
+      
+  <h4 class="archive-header">By day</h4>
+  <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m/%d' }}/">{{ page.date | date: '%d' }}</a></strong>
 </nav>
 
 <hr>
 
+<h2 id="{{ page.date | date: '%Y' }}"><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}">{{ page.date | date: '%Y' }}</a></h2>
+
+<h3><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m' }}/">{{ page.date | date: '%B' }}</a></h3>
+
+<h4><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y/%m/%d' }}/">{{ page.date | date: '%d' }}</a></h4>
+
+<ul class="related-posts">
+  {% for post in page.posts %}
+    <li class="archive-posts">{% include post-list.html %}</li>
+  {% endfor %}
+</ul>
+
+<hr>
+
+<!--
 {% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}
   {% for year in postsByYear %}
     <h2 id="{{ year.name }}"><a href="{{ site.baseurl }}/blog/{{ year.name }}">{{ year.name }}</a></h2>
@@ -25,4 +48,4 @@ layout: archive
       </ul>
     {% endfor %}
   <hr>
-{% endfor %}
+{% endfor %}-->
