--- a/_layouts/year-archive.html
+++ b/_layouts/year-archive.html
@@ -2,36 +2,29 @@
 layout: archive
 ---
 
-<!--{% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}-->
-{% assign year = page.posts %}
-<!--{% assign months = postsByYear[0].items | group_by_exp:"post", "post.date | date: '%B'" %}-->
+{% assign postsByMonth = year.items | group_by_exp:"post", "post.date | date: '%B'" %}
 
-
-<h2>By year</h2>
 <nav class="archive-nav" aria-label="year">
+  <h2 class="archive-header">By year</h2>
   <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/">{{ page.date | date: '%Y' }}</a></strong>&nbsp;
     
   <h3 class="archive-header">By month</h3>
     
-  {% for month in months reversed %}
+  {% for month in postsByMonth reversed %}
     <strong><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}/{{ month.name | date: '%m' }}">{{ month.name }}</a></strong>&nbsp;
   {% endfor %}
 </nav>
 
 <hr>
 
-<!--{% assign postsByYear = page.posts | group_by_exp:"post", "page.date | date: '%Y'" %}-->
-<!--  {% for year in postsByYear %}-->
-    <h2 id="{{ year.name }}"><a href="{{ site.baseurl }}/blog/{{ year.name }}">{{ year.name }}</a></h2>
-    {% assign postsByMonth = year.items | group_by_exp:"post", "post.date | date: '%B'" %}
+<h2 id="{{ page.date | date: '%Y' }}"><a href="{{ site.baseurl }}/blog/{{ page.date | date: '%Y' }}">{{ page.date | date: '%Y' }}</a></h2>
 
-    {% for month in postsByMonth %}
-    <h3><a href="{{ site.baseurl }}/blog/{{ year.name }}/{{ month.name | date: '%m' }}/">{{ month.name }}</a></h3>
-      <ul class="related-posts">
-        {% for post in month.items %}
-          <li class="archive-posts">{% include post-list.html %}</li>
-        {% endfor %}
-      </ul>
+{% for month in postsByMonth %}
+<h3><a href="{{ site.baseurl }}/blog/{{ year.name }}/{{ month.name | date: '%m' }}/">{{ month.name }}</a></h3>
+  <ul class="related-posts">
+    {% for post in month.items %}
+      <li class="archive-posts">{% include post-list.html %}</li>
     {% endfor %}
-  <hr>
-<!--{% endfor %}-->
+  </ul>
+{% endfor %}
+<hr>
