--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
         <nav id="top-level">
             <ul>
                 <h3 class="masthead-title">
-                    <li><a class="left" href="{{ site.url }}/" title="Home">
+                    <li><a class="left" href="{{ site.url }}" title="Home">
                         {% if page.non-blog %}
                           {{ site.title }}
                         {% else %}
@@ -24,11 +24,11 @@
                         {% endif %}
                         </a></li>
                     <small>
-                        <li><a href="/blog/">blog</a></li>
-                        <li><a href="/blog/archive/">archive</a></li>
-                        <li><a href="/projects.html">projects</a></li>
-                        <li><a href="/cv.html">cv</a></li>                        
-                        <li><a href="/about.html">about</a></li>
+                        <li><a href="/blog">blog</a></li>
+                        <li><a href="/blog/archive">archive</a></li>
+                        <li><a href="/projects">projects</a></li>
+                        <li><a href="/cv">cv</a></li>                        
+                        <li><a href="/about">about</a></li>
                     </small>
                 </h3>
             </ul>
