--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -23,6 +23,10 @@
   margin-top: 0;
 }
 
+.external-link {
+  text-decoration: underline;
+}
+
 // Meta data line below post title
 .post-date {
   display: block;
