--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -23,12 +23,16 @@
   margin-top: 0;
 }
 
-a.external-link {
-  &:link,
-  &:visited,
-  &:active {
+//.external-link a {
+//  &:link,
+//  &:visited,
+//  &:active {
+//    text-decoration: underline;
+//  }
+//}
+
+.external-link a {
     text-decoration: underline;
-  }
 }
 
 // Meta data line below post title
