--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -31,8 +31,8 @@
 //  }
 //}
 
-.external-link a {
-    text-decoration: underline;
+.external a {
+  text-decoration: underline;
 }
 
 // Meta data line below post title
