--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,8 +46,8 @@
         </small>
       </footer>
     </div>
-
-  <script async defer src="https://api.jden.me/app.js"></script> 
+  <!-- Privacy friendly website statistics -->
+  <script async defer src="https://api.jden.me/latest.js"></script>
   <noscript><img src="https://api.jden.me/image.gif" alt=""></noscript>
   </body>
 </html>
